chore: remove iris agent and restructure hierarchy
This commit removes the iris agent and updates the agent hierarchy to a
simplified 2-layer structure. Noctis now directly manages the Comrades
(Ignis, Gladiolus, Prompto) while Lunafreya operates independently.
All related configuration, instruction files, and documentation have
been updated to reflect these changes, ensuring a cohesive and
streamlined agent interaction model.

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,9 @@ projects/
 # Skillport
 .skillportrc
 
+# OpenSpec
+openspec/
+
 # Commands and skills (managed by OpenCode)
 .github/*
 .opencode/command/*
