--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ openspec/
 .opencode/skills/*
 !.opencode/skills/skill-creator
 !.opencode/skills/pr-assistant
+!.opencode/skills/opencode-plugin-creator
