--- a/.gitignore
+++ b/.gitignore
@@ -54,5 +54,6 @@ openspec/
 .opencode/command/*
 .opencode/skills/*
 !.opencode/skills/skill-creator
+!.opencode/skills/send-message
 !.opencode/skills/pr-assistant
 !.opencode/skills/opencode-plugin-creator
