feat: add switch-model skill for dynamic model switching
This skill allows agents to dynamically switch their LLM models at runtime
using the /models command. It enhances flexibility for task management
by enabling upgrades and downgrades based on task complexity and cost
optimization.

--- a/.gitignore
+++ b/.gitignore
@@ -55,5 +55,6 @@ openspec/
 .opencode/skills/*
 !.opencode/skills/skill-creator
 !.opencode/skills/send-message
+!.opencode/skills/switch-model
 !.opencode/skills/pr-assistant
 !.opencode/skills/opencode-plugin-creator
