feat: add project registration skill and documentation

--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ openspec/
 !.opencode/skills/skill-creator
 !.opencode/skills/send-message
 !.opencode/skills/switch-model
+!.opencode/skills/project-register
 !.opencode/skills/pr-assistant
 !.opencode/skills/opencode-plugin-creator
 
