--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ test_output/
 *.tmp
 *.bak
 
+# Node modules (managed by package.json)
+node_modules/
+
 # Demo/analysis outputs (generated during tasks)
 demo_output/
 
@@ -63,6 +66,7 @@ openspec/
 !.opencode/skills/project-register
 !.opencode/skills/pr-assistant
 !.opencode/skills/opencode-plugin-creator
+!.opencode/skills/typescript-check
 
 # Docs (private/internal use only)
 docs/private
