--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,7 @@ openspec/
 !.opencode/skills/project-register
 !.opencode/skills/pr-assistant
 !.opencode/skills/opencode-plugin-creator
+!.opencode/skills/opencode-troubleshoot
 !.opencode/skills/typescript-check
 
 # Docs (private/internal use only)
