feat: add github-release skill with Python scripts for automating versioning, changelog updates, PR creation, and GitHub releases.

--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,7 @@ openspec/
 !.opencode/skills/switch-model
 !.opencode/skills/project-register
 !.opencode/skills/pr-assistant
+!.opencode/skills/github-release
 !.opencode/skills/opencode-plugin-creator
 !.opencode/skills/opencode-troubleshoot
 !.opencode/skills/code-simplifier
