feat: add inbox management and stress tests
- Implement inbox backup and initialization in standby.sh
- Add stress tests for concurrent inbox writing and overflow handling
- Create phase 3 and phase 4 integration tests for busy detection
- Ensure YAML integrity during concurrent writes and overflow scenarios
- Validate message routing and backward compatibility for tasks

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ demo_output/
 
 # Runtime data (generated during operation)
 output/
+queue/inbox/
+queue/metrics/
 queue/research/
 queue/tasks/
 queue/reports/
